--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -103,7 +103,7 @@
   
      @media all and (max-width: 600px){
         body{
-            width: 100%;
+         /*   width: 100%;*/
             font-size: 1rem;
             display: block;
             
@@ -118,14 +118,16 @@
             width: 100%;
            
         }
+           a{
+             display: block;
+           /* width: 100%;*/
+
+        }
+
         .col-12{
             width: fit-content;
         }
-         a{
-             display: block;
-            width: 100%;
-
-        }
+         
         img{
             width: fit-content;
     }
