--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -146,8 +146,9 @@
          h2{
             font-size: 1.3rem;
          }
-         footer{
+         .footer{
             width: 100%;
+            display: block;
          }
      }
       
