--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -103,7 +103,7 @@
   
      @media all and (max-width: 600px){
         body{
-         /*   width: 100%;*/
+            width: 100%;
             font-size: 12px;
             display: block;
             
@@ -120,8 +120,8 @@
         }
            a{
              
-            width: fit-content;
-
+            width: 100%;
+            
         }
 
         .col-12{
@@ -141,10 +141,10 @@
             width: fit-content;
     }
          h1{
-            font-size: 1.5rem;
+            font-size: 20px;
          }
          h2{
-            font-size: 1.3rem;
+            font-size: 16px;
          }
          .footer{
             width: 100%;
